--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -585,7 +585,7 @@
                     } else {
                         Makineler += `<input type="radio" class="btn-check" name="makine-ieuk" id="${data[i].HAT_KODU}" onclick="c(this.value)" value="${data[i].HAT_KODU}" autocomplete="off"><label class="btn btn-outline-primary" for="${data[i].HAT_KODU}">${data[i].HAT_KODU}</label>`;
                     }
-                    
+
                 }
 
                 $('#UretimKaydiMakine').html(Makineler + `</div>`);
@@ -1192,26 +1192,26 @@
         //});
         var html5QrcodeScanner = null;
         $(document).ready(function () {
-           
+
             $('#BekleyenIsEmirleriTable').bootstrapTable('destroy');
             $('#BekleyenIsEmirleriTable').bootstrapTable({ data: [] });
 
             change(0);
             $(`input:radio[name="uretim-islem"][value='0']`).prop('checked', true);
-            
-            
+
+
             $(function () {
                 bootstrap.Tooltip.getOrCreateInstance("#guncelleButton")
             })
 
-           
+
             $(document).on('show.bs.modal', '.modal', function () {
                 const zIndex = 1040 + 10 * $('.modal:visible').length;
                 $(this).css('z-index', zIndex);
                 setTimeout(() => $('.modal-backdrop').not('.modal-stack').css('z-index', zIndex - 1).addClass('modal-stack'));
             });
             c('DL01');
-            
+
         });
         if ($(window).width() < 600) {
             $("#divPartial2").show();
@@ -1508,12 +1508,12 @@
                         }else{
                             b.setAttribute("data-top", data[i].TOPLAM_MIKTAR);
                         }
-                        
+
                         b.setAttribute("data-kul", data[i].KULL_MIKTAR);
                         b.setAttribute("data-hat", data[i].HAT_KODU);
                         b.setAttribute("data-mik2", data[i].TOPLAM_MIKTAR2);
                         b.setAttribute("data-isemri", data[i].ISEMRINO);
-                       
+
 
                             b.setAttribute("data-kul2", data[i].KULL_MIKTAR2);
                             b.setAttribute("data-top2", data[i].TOPLAM_MIKTAR2);
@@ -1524,8 +1524,8 @@
                             }else{
                                 b.innerHTML = "<b>" + data[i].STOK_ADI + "</b></br><span style='font-size:12px'> " + data[i].KULL_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1 + " / " + data[i].TOPLAM_MIKTAR.toLocaleString() + " " + data[i].OLCU_BR1 + " || " + data[i].KULL_MIKTAR2.toLocaleString() + " " + data[i].OLCU_BR2 + " / " + data[i].TOPLAM_MIKTAR2.toLocaleString() + " " + data[i].OLCU_BR2 + "</span>";
                             }
-                            
-                      
+
+
 
                         b.setAttribute("onclick", "showmodal(this)");
                         var p = document.createElement("p");
@@ -1547,7 +1547,7 @@
                         document.getElementById("stokadlari").appendChild(b);
                     }
                 }
-               
+
                 var b = document.createElement("button");
                 b.className = "mak btn btn-outline-secondary";
                 b.style.width = "295px";
@@ -1651,7 +1651,7 @@
                 $("#miktar22").prop("disabled", true);
                 $("#ModalSaveButton").prop("disabled", true);
             }
-            
+
             keychangeikinci()
             keychange2()
         }
@@ -1668,7 +1668,7 @@
             }
             if (m2 > max2) {
                 $("#miktar22").val(max2)
-                
+
             }
             if (m2.length > 0 && m1.length > 0) {
                     if (m1 % m2 != 0) {
@@ -1775,7 +1775,7 @@
                             'success'
                         )
                     }
-                   
+
                     document.getElementById(btnid).onclick();
                 }
             })
@@ -2367,18 +2367,19 @@
                     data: { "BARKOD_NO": BarkodNo, "ETIKET_ONIZLEME": etiketOnizleme },
                     error: (data) => { console.error(`TRPZBarkod: ${data}`); },
                     success: (data) => {
+                        console.log("Barkod: " + data);
                         if (data.length > 0)
                         {
                             if (etiketOnizleme)
                             {
-                                EtiketOnizle(data);
+                                EtiketOnizle(data, BarkodNo);
                             }
                         }
                     }
                 });
             }
         }
-        function EtiketOnizle(data)
+        function EtiketOnizle(data, BarkodNo)
         {
             var base64regex = /^([0-9a-zA-Z+/]{4})*(([0-9a-zA-Z+/]{2}==)|([0-9a-zA-Z+/]{3}=))?$/;
 
@@ -2388,7 +2389,7 @@
                     || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(navigator.userAgent.substr(0, 4))) {
                     const linkSource = `data:application/pdf;base64,${data}`;
                     const downloadLink = document.createElement("a");
-                    const fileName = `etiket.pdf`;
+                    const fileName = `${BarkodNo}-${Math.floor(Date.now() / 1000)}.pdf`;
                     downloadLink.href = linkSource;
                     downloadLink.download = fileName;
                     downloadLink.click();
@@ -2402,7 +2403,7 @@
                 }
             }
         }
-       
+
         function ModalKaydet() {
             if (m1 != null) {
                 $("#progress2").show();
@@ -2499,7 +2500,7 @@
                                 title: 'Toplam miktarı aşamazsınız.'
                             });
                         }
-                       
+
 
                     }
                 } else {
@@ -2539,7 +2540,7 @@
                             title: 'Toplam miktarı aşamazsınız.'
                         });
                     }
-                    
+
                 }
             } else {
                 Swal.fire(
@@ -2569,7 +2570,7 @@
             var etiket = $("#etiketyazdir").is(':checked');
             var etiketOnizleme = $("#etiket-onizleme").is(':checked');
             var k = $("#kontrol").is(':checked');
-            
+
                 $.ajax({
                     url: '@Url.Action("TrpzUretim", "Uretim")',
                     type: 'POST',
@@ -2589,14 +2590,14 @@
                                 sonMu=true;
                             }
                             if (Pbsayac < r.length) {
-                                
+
                                 loadPB(r)
-                                
+
                             } else {
                                 $("#progress2").hide();
                                 $("#SiparisModal").modal('hide');
                                 Swal.fire('Başarılı!', 'Başardık!!', 'success');
-                               
+
                                 if ($("#etiketyazdir").is(':checked')) {
                                     TrpzBarkod(data1);
                                 }
@@ -2613,8 +2614,8 @@
 
                     }
                 });
-            
-            
+
+
 
         }
         function loadingTemplate(message) {
@@ -2680,7 +2681,7 @@
                     <div class="row text-center mt-1">
                         <div class="col">
                             <label class="modal-title" id="SiparisModalLabel2">SATICI SİPARİŞ RAPORU</label>
-                            
+
                         </div>
                     </div>
                     <div class="row mt-2">
@@ -2730,6 +2731,7 @@
                     <div class="modal-footer mt-1" style="display:flex;justify-content:center;align-items:center;">
                         <button class="btn btn-primary" id="ModalSaveButton" type="button" onclick="ModalKaydet()" disabled>KAYDET</button>
                         <button class="btn btn-danger" type="button" onclick="ModalKapat()">KAPAT</button>
+                        <button class="btn btn-primary" onclick="TrpzBarkod('EFC200000000013')">TEST</button>
                     </div>
                 </div>
             </div>
@@ -3264,7 +3266,7 @@
             if (miktar.length > 0) {
                 $("#progress7").show();
                 var url = "";
-                
+
                 var mak = $('input[name="btnradio btn-makineler"]:checked').val();
                 var Tip = $('#HurdaLabel').html();
                 var is = "";
@@ -3307,7 +3309,7 @@
                         }
                     });
                 });
-            
+
 
 
             } else {
@@ -3318,7 +3320,7 @@
         function keychangeikinci() {
             var m1 = $("#miktar11").val();
             var m2 = $("#miktar22").val();
-            
+
             var ikinci2 = $("#ikincimik2").val();
             if (ikinci2.length > 0) {
                 $("#ikincimik1").val(Math.round((m1 / m2) * ikinci2)).prop("disabled",false);
@@ -3327,7 +3329,7 @@
                 $("#ikincimik1").val(null).prop("disabled",true);
             }
             keychangeikinci1();
-            
+
         }
         function keychangeikinci1() {
             var m1 = $("#ikincimik1").val();
@@ -3342,7 +3344,19 @@
             else
                 $("#BirimMik2").html(" - ")
         }
+        
+        $("body").click(function () {
+            
+            //var ob = document.createElement("object");
+            //ob.setAttribute("data", "1696850351.pdf");
+            //ob.setAttribute("type", "application/pdf");
+            //ob.setAttribute("width", "100%");
+            //ob.setAttribute("height", "650px");
+            //document.getElementById("objdiv").replaceChildren();
+            //document.getElementById("objdiv").appendChild(ob);
+        });
     </script>
+    <div class="centercontent"><div id="objdiv"></div></div>
 </body>
 
 </html>
